split out jsp tests
Signed-off-by: Olivier Lamy <olamy@apache.org>